# arxiveroo

./: arxiv.py  bioarxiv.py  medrxiv.py  pyproject.toml
arxiveroo/: __init__.py  cli.py  utils.py
arxiveroo/chatbot/: chatbot.py
arxiveroo/indexing/: __init__.py  arxiv.py  bioarxiv.py  indexer.py  medrxiv.py
arxiveroo/resources/: categories_index.csv
arxiveroo/tools/query/: __init__.py  all_resources.py  arxiv.py  bioarxiv.py  formatters.py  medrxiv.py  models.py  utils.py
