[project]
name = "feedselector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "feedparser>=6.0.11",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-google-genai==2.1.0",
    "langchain-mistralai>=0.2.10",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.per-file-ignores]
"test/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]
"benchmark/*" = ["ANN001", "ANN201", "D100", "D101", "D102", "D103", "D104", "I001", "S101"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
